--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -67,3 +67,13 @@
   year={2016},
   publisher={Frontiers}
 }
+@article{choi2013vibrotactile,
+  title={Vibrotactile display: Perception, technology, and applications},
+  author={Choi, Seungmoon and Kuchenbecker, Katherine J},
+  journal={Proceedings of the IEEE},
+  volume={101},
+  number={9},
+  pages={2093--2104},
+  year={2013},
+  publisher={IEEE}
+}
