--- a/Thesis/thesis-hapticDesign.tex
+++ b/Thesis/thesis-hapticDesign.tex
@@ -1,13 +1,35 @@
 \chapter{Haptic Design}
 This chapter discusses the design requirements, initial prototypes, and overall challenges overcome which led to the development of the final prototype, the vibrotactile array.
 
-\section{Requirements}
+\section{Brief introduction to haptics}
+\textbf{Haptics} are the field of research which concern the sense of touch as it applies to \textit{kinesthetic} and \textit{tactile} sensation. The tactile sense enables humans to perceive object properties through skin contact while the kinesthetic or \textit{proprioceptive} sense lets one perceive the positions, movements, and forces on one's own body. 
+
+The skin is lined with four types of sensory receptors which respond to mechanical pressure and distortions such as skin deformation. Out of the four, the \textit{lamellated} or \textit{pacinian corpuscles} (PC) are responsible for sensitivity to vibration and pressure. These are rapidly adapting receptors and are responsible for vibrotactile perception in glabrous skin. 
+
+Overstimulation is indeed possible, as action potentials are formed when skin is rapidly distorted but not when pressure is continuous due to mechanical filtering of the stimulus in the lamellar structure. If this was not the case, a person could feel the pressure exerted by wearing clothing.
+Any skin deformation causes action potentials to be generated and the PC's are optimally sensitive at 250Hz \cite{choi2013vibrotactile}.
+
+\section{Design requirements}
+
+The initial requirement set forth by Professor Neely in the Haptic Enviro-Sensing Metronome (HESM) design draft is centered around an analogue wave that could squeeze and release. As the analogue wave approaches its crest it provides insight forecasting the approaching \textit{crusis}, allowing the user to prepare for and rebound from the "click-moment" with rich entrainment.
+
+As the intention is to encourage entrainment of the human body to external forces, the frequencies
+required are quite low, based on the tempi of slow walking to running gaits
+(40 bpm/.67 Hz to 180 bpm/3 Hz).
+
+\cite{Neely}
+\todo[inline,size=\tiny]{add HESM design to bio for citations}
+
+\section{Initial Prototypes}
+
+\section{Vibrotactile Haptic}
+
+\subsection{Hardware}
 
 
+\subsection{Software}
 
-\subsection{Initial Prototypes}
 
-\subsection{Vibrotactile Haptic}
 
 \section{Design Challenges}
 
