+ch3 filling out

--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -77,3 +77,37 @@
   year={2013},
   publisher={IEEE}
 }
+@article{elliott2010multisensory,
+  title={Multisensory cues improve sensorimotor synchronisation},
+  author={Elliott, Mark T and Wing, AM and Welchman, AE},
+  journal={European Journal of Neuroscience},
+  volume={31},
+  number={10},
+  pages={1828--1835},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+@inproceedings{holland2010feeling,
+  title={Feeling the beat where it counts: fostering multi-limb rhythm skills with the haptic drum kit},
+  author={Holland, Simon and Bouwer, Anders J and Dalgelish, Mathew and Hurtig, Topi M},
+  booktitle={Proceedings of the fourth international conference on Tangible, embedded, and embodied interaction},
+  pages={21--28},
+  year={2010},
+  organization={ACM}
+}
+@inproceedings{holland2014gait,
+  title={A gait rehabilitation pilot study using tactile cueing following hemiparetic stroke},
+  author={Holland, Simon and Wright, Rachel L and Wing, Alan and Crevoisier, Thomas and H{\"o}dl, Oliver and Canelli, Maxime},
+  booktitle={Proceedings of the 8th International Conference on Pervasive Computing Technologies for Healthcare},
+  pages={402--405},
+  year={2014},
+  organization={ICST (Institute for Computer Sciences, Social-Informatics and Telecommunications Engineering)}
+}
+@inproceedings{ignoto2017development,
+  title={Development of a Vibrotactile Metronome to Assist in Conducting Contemporary Classical Music},
+  author={Ignoto, Patrick and Hattwick, Ian and Wanderley, Marcelo M},
+  booktitle={International Conference on Applied Human Factors and Ergonomics},
+  pages={248--258},
+  year={2017},
+  organization={Springer}
+}
