--- a/Thesis/thesis-conclusions.tex
+++ b/Thesis/thesis-conclusions.tex
@@ -17,4 +17,14 @@ for the purposing of testing this
 
 Parkingson's research
 
-Stroke gait rehabilitation research
+Stroke gait rehabilitation research \cite{holland2014gait}
+
+Through their research they discovered the extension of the application towards those with restricted mobility and morphed the project into the haptic bracelet 4 years later.
+
+Stroke survivors usually suffer from  for the purpose of gait rehabilitation. The results were promising. 
+
+Paper discusses the prior research of audio stimulation and how it yields immediate improvement through entrainment but that they are not lasting
+
+Focussed on triggering the tibialis anterior which contrasts the principles of entrainment, which would utilize rhythmic beats in any sensory modality, regardless of placement. Also haptic masking from leg-to-floor-impact
+
+One patient who was a veteran mentioned that it put a marching sense back into his mind and helped remind him of that sensation of even walking.
