+filling out haptic section

--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -111,3 +111,13 @@
   year={2017},
   organization={Springer}
 }
+@article{fishbach2001auditory,
+  title={Auditory edge detection: a neural model for physiological and psychoacoustical responses to amplitude transients},
+  author={Fishbach, Alon and Nelken, Israel and Yeshurun, Yehezkel},
+  journal={Journal of Neurophysiology},
+  volume={85},
+  number={6},
+  pages={2303--2323},
+  year={2001},
+  publisher={Am Physiological Soc}
+}
