--- a/Thesis/thesis-packages.tex
+++ b/Thesis/thesis-packages.tex
@@ -10,6 +10,7 @@
 \graphicspath{ {figures/} }
 \usepackage{epigraph}
 \usepackage[cmex10]{amsmath}
+\usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{appendix}
 \usepackage[numbers,sort]{natbib}
