--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -121,3 +121,13 @@
   year={2001},
   publisher={Am Physiological Soc}
 }
+@article{parsons2006neurobiology,
+  title={Neurobiology: auditory fidelity},
+  author={Parsons, Thomas D},
+  journal={Nature},
+  volume={444},
+  number={7122},
+  pages={1013},
+  year={2006},
+  publisher={Nature Publishing Group}
+}
