--- a/Thesis/thesis-hapticDesign.tex
+++ b/Thesis/thesis-hapticDesign.tex
@@ -35,7 +35,7 @@ Research into experimental psychology has deemed a 20-30\% difference in amplitu
         \item tactile perception is generally considered to have high temporal acuity
         \item vibrotactile temporal resolution research cites a humans ability to distinguish successive pulses with a time gap as small as 5 ms (12000 BPM)
         \begin{itemize}
-            \item this resolution is better than vision (25ms) but slightly worse than physiological experiments into the peripheral auditory system which cites a theoretical best case scenario of approximately 2 ms \cite{fishbach2001auditory}
+            \item this resolution is better than vision (25ms) but slightly worse than physiological experiments into the peripheral auditory system which cites a theoretical best case scenario of approximately 2 ms \cite{fishbach2001auditory} \cite{parsons2006neurobiology}
         \end{itemize}
     \end{itemize}
     \item \emph{Can Vibrotactile cues elicit any other perceptual effects?}
